# kinvo-engenheiro-de-dados

./: .dockerignore  .gitignore  API.py  Dockerfile  FinSpider.py  Makefile  PLN.py  README.md  README.txt  README_CONTATO.txt  Web_Scraping.rar  alembic.ini  api.py  app.ipynb  app.py  bibliotecas.txt  crawler.py  dados.json  docker-compose.yml  entityGetter.py  entityfinder.py  entrypoint.sh  finance-news  kinvo.py  load_parameter_util.py  main.py  news-financenews.html  news.csv  news.json  nlp.py  notice.py  noticias.json  pip_requirements.txt  postgresql.conf  pyproject.toml  requeriments.txt  requirements.txt  rss.py  run.py  scrapy.cfg  (+11 more)
Kinvo/: README.md  run.sh  scrapy.cfg
Kinvo/Kinvo/: app.py  feedspider.json  items.py  middlewares.py  pipelines.py  (+1 more)
Mining/: items.py  middlewares.py  pipelines.py  settings.py
api/: server.py
b3StockNews/: b3stocks.py  content.txt  items.py  middlewares.py  pipelines.py  settings.py
content/: config.cfg  meta.json
crawler/: items.py  settings.py
data/: noticiasFinance.json  noticiasFinanceEntities.json
financescrape/: app.py  requirements.txt  scrapy.cfg
kinvo/: logger.py  main.py
mining/: scrapy.cfg
model/: config.cfg  meta.json
model_lucas/: meta.json
new-api/: main.py
news/: noticias_extraidas.csv  teste6.csv
scripts/: Untitled.ipynb  extrair.py  main.py  raspagem.py  teste.csv  teste2.csv  teste3.csv  teste4.csv  teste5.csv  train_model.py
src/: outputfile.json  scraper.py  server.py
templates/: codigo.py  index.html  news.html  savenews.html  scapy.html
webapp/: app.py  data.json  nlp.py
(+87 files in other folders)
